fix for top spacing on lede

--- a/assets/components/atoms/lede/_lede.scss
+++ b/assets/components/atoms/lede/_lede.scss
@@ -12,4 +12,7 @@
             font-size: ms(1, $thread: desktop);
         }
     }
+    > *:first-child {
+        margin-top: 0;
+    }
 }
